# doodle-book

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  build.rs  docker-compose-linux-x86_64.sha256  docker-compose.yaml  fly.toml
.github/workflows/: ci.yml
assets/: docker-compose-linux-x86_64.sha256  hello.js  index.js  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.prod.js
assets/src/: schema.rs
assets/static/: style.css
doodle-wasm/: Cargo.toml
doodle-wasm/src/: default_drawing.rs  lib.rs
doodle-wasm/tests/: canvas_form.html  drawings_list.html  integration.rs  web.rs
migrations/2023-01-22-120636_create_doodle_drawings/: up.sql
migrations/2023-02-01-163937_create_users/: up.sql
migrations/2023-02-02-120636_create_doodle_drawings/: down.sql  up.sql
migrations/2023-02-17-174305_add_profile_pic_to_users/: down.sql  up.sql
migrations/2023-03-11-155416_create_relationship/: down.sql  up.sql
migrations/2023-03-11-170548_add_counts_to_users/: down.sql  up.sql
src/: main.rs  model.rs  routes.rs  schema.rs  services.rs  test.rs
src/model/: drawing.rs  relationship.rs  user.rs
src/routes/: drawings_route.rs  profile_route.rs  relationships_route.rs  users_route.rs
templates/: auth_home.html.tera  base.html.tera  home.html.tera  signin.html.tera  signup.html.tera  unauth_home.html.tera  user.html.tera  user_edit.html.tera
templates/partials/: canvas_doodle_form.html.tera  canvas_form.html.tera  canvas_user_form.html.tera  drawings_list.html.tera  macros.html.tera  user_badge.html.tera
