[package]
name = "doodle-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
diesel = { version = "1.4.8" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = [
    "diesel_postgres_pool",
] }
[workspace]
members = ["doodle-wasm"]
