[package]
name = "doodle-canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
serde_json = "1.0.91"


[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'Window',
    'console',
    'HtmlFormElement',
    'HtmlInputElement',
]
